Remove CoreServices.h from Blink's precompiled headers on Mac

Its presence is causing compile failures in non-goma builds since the
Blink identifier renames in r463139. (goma builds disable precompiled
headers, so this problem isn't appearing on the bots).

Blink Mac code doesn't seem to use anything from it. The framework
includes deprecated Carbon framework headers such as AVLTree.h which
pollute the global namespace with `kLeftToRight` which is causing
ambiguity with WTF::Unicode::kLeftToRight when it is used in
WebKit/Source/platform/text/BidiResolver.h

Note that Objective C code in blink (there is not much of it) will still
see symbols from CoreServices.h when it's included via Cocoa.h.

BUG=709850
TBR=thakis@chromium.org

Review-Url: https://codereview.chromium.org/2800343002
Cr-Commit-Position: refs/heads/master@{#463173}