third_party/WebKit/Source/build/mac/Prefix.h
@@ -49,7 +49,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <sys/time.h>
 #include <sys/resource.h>
 #include <CoreFoundation/CoreFoundation.h>
-#include <CoreServices/CoreServices.h>
 
 #ifdef __OBJC__
 #import <Cocoa/Cocoa.h>
